# ibmi-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
src/ibmi_mcp/: __init__.py  __main__.py  config.py  server.py
src/ibmi_mcp/tn5250/: __init__.py  commands.py  constants.py  ebcdic.py  field.py  protocol.py  screen.py  session.py  stream.py
tests/: test_auto_signon.py  test_cursor_placement.py  test_local_editing.py  test_monocase.py  test_query_reply.py  test_sba_addressing.py  test_sf_parsing.py  test_timeout.py
